# BlitzLLVM

./: .gitignore  .gitmodules  CMakeLists.txt
projects/code_compiler/: CMakeLists.txt  CMakeVersion.txt
projects/code_compiler/source/: compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
projects/code_compiler/templates/: version.h
tests/: 001.bb  002.bb
